fix issues after merge of Core and UI Common/Core

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ test-output
 .project
 .clover
 .externalToolBuilders
+MANIFEST.MF
+dependency-reduced-pom.xml
+*.orig
+.checkstyle
+rebel.xml
+.faces-config.xml.jsfdia
