--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -237,6 +237,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>src/main/config</source>
                                 <source>src/main/templates</source>
                                 <source>${project.build.directory}/generated-sources/main/java</source>
                                 <source>${project.build.directory}/generated-sources/main/resources</source>
