--- a/impl/src/main/resources/META-INF/richfaces/resource-mappings.properties
+++ b/impl/src/main/resources/META-INF/richfaces/resource-mappings.properties
@@ -1,3 +1,15 @@
+# Core
+org.richfaces.images\:inputBackgroundImage.png=org.richfaces.renderkit.html.images.InputBackgroundImage
+org.richfaces.images\:buttonBackgroundImage.png=org.richfaces.renderkit.html.images.ButtonBackgroundImage
+org.richfaces.images\:buttonHoverBackgroundImage.png=org.richfaces.renderkit.html.images.ButtonHoverBackgroundImage
+org.richfaces.images\:buttonDisabledBackgroundImage.png=org.richfaces.renderkit.html.images.ButtonDisabledBackgroundImage
+org.richfaces.images\:inputErrorIcon.png=org.richfaces.renderkit.html.images.InputErrorIcon
+org.richfaces.images\:standardButtonBgImage.png=org.richfaces.renderkit.html.images.StandardButtonBgImage
+org.richfaces.images\:standardButtonPressedBgImage.png=org.richfaces.renderkit.html.images.StandardButtonPressedBgImage
+
+org.richfaces.images\:gradientA.png=org.richfaces.renderkit.html.BaseGradient{baseColorParam\=headerGradientColor, gradientColorParam\=headerBackgroundColor}
+			
+# UI Core/Common			
 org.richfaces.images\:chevron.png=org.richfaces.renderkit.html.iconimages.PanelIconChevron
 org.richfaces.images\:chevronDisabled.png=org.richfaces.renderkit.html.iconimages.PanelIconChevron{disabled=true}
 
