Namespace change for the jpa-demo example

--- a/examples/jpa-demo/pom.xml
+++ b/examples/jpa-demo/pom.xml
@@ -69,6 +69,7 @@
     </dependencies>
 
     <build>
+        <finalName>jpa-demo</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
