--- a/pom.xml
+++ b/pom.xml
@@ -23,19 +23,17 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>8</version>
+        <version>9</version>
     </parent>
 
     <groupId>org.richfaces</groupId>
     <artifactId>richfaces-parent</artifactId>
     <packaging>pom</packaging>
-    <version>13-SNAPSHOT</version>
+    <version>4.3.0-SNAPSHOT</version>
     <name>RichFaces Parent</name>
 
     <description>
-        This is the parent for all RichFaces artifacts, and contains project
-        metadata, shared/stable configuration, and other common settings that 
-        change very rarely.
+        This is the aggregator of RichFaces Framework build.
     </description>
 
     <url>http://richfaces.org</url>
@@ -74,18 +72,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
-        <!-- Versions rewritten from jboss-parent -->
-        <!-- * surefire: requested for upgrade in JBBUILD-713 -->
-        <version.surefire.plugin>2.11</version.surefire.plugin>
-        
         <!-- Plugin Management: versions -->
-        <version.xml.plugin>1.0</version.xml.plugin>
-        <version.javacc.plugin>2.4.1</version.javacc.plugin>
-        <version.invoker.plugin>1.3</version.invoker.plugin>
-        <version.modello.plugin>1.0.2</version.modello.plugin>
-        <version.guice.plugin>2.2.0</version.guice.plugin>
-        <version.gmaven.plugin>1.0</version.gmaven.plugin>
-        <version.jstools.plugin>0.7</version.jstools.plugin>
         <version.jacoco.plugin>0.5.5.201112152213</version.jacoco.plugin>
         <version.jrebel.plugin>1.1.3</version.jrebel.plugin>
         
@@ -209,63 +196,12 @@
                     <version>${version.jrebel.plugin}</version>
                 </plugin>
 
-
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>xml-maven-plugin</artifactId>
-                    <version>${version.xml.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>javacc-maven-plugin</artifactId>
-                    <version>${version.javacc.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-invoker-plugin</artifactId>
-                    <version>${version.invoker.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.modello</groupId>
-                    <artifactId>modello-maven-plugin</artifactId>
-                    <version>${version.modello.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>gr.abiss.mvn.plugins</groupId>
-                    <artifactId>maven-jstools-plugin</artifactId>
-                    <version>${version.jstools.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.camel</groupId>
-                    <artifactId>guice-maven-plugin</artifactId>
-                    <version>${version.guice.plugin}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.camel</groupId>
-                            <artifactId>camel-guice</artifactId>
-                            <version>${version.guice.plugin}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.groovy.maven</groupId>
-                    <artifactId>gmaven-plugin</artifactId>
-                    <version>${version.gmaven.plugin}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.codehaus.groovy.maven.runtime</groupId>
-                            <artifactId>gmaven-runtime-1.6</artifactId>
-                            <version>${version.gmaven.plugin}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${version.jacoco.plugin}</version>
                 </plugin>
+                
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
@@ -312,9 +248,9 @@
 
     <!-- SCM and distribution management -->
     <scm>
-        <connection>scm:git:git://github.com/richfaces/parent.git</connection>
-        <developerConnection>scm:git:git@github.com:richfaces/parent.git</developerConnection>
-        <url>https://github.com/richfaces/parent</url>
+        <connection>scm:git:git://github.com/richfaces/richfaces.git</connection>
+        <developerConnection>scm:git:git@github.com:richfaces/richfaces.git</developerConnection>
+        <url>https://github.com/richfaces/richfaces</url>
     </scm>
 
 </project>
