--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
         This is the aggregator of RichFaces Framework build.
     </description>
 
+    <modules>
+        <module>build</module>
+        <module>bom</module>
+        <module>impl</module>
+    </modules>
+
     <url>http://richfaces.org</url>
 
     <licenses>
@@ -69,15 +75,14 @@
     </mailingLists>
 
     <properties>
+        <version.richfaces>4.3.0-SNAPSHOT</version.richfaces>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
         <!-- Plugin Management: versions -->
         <version.jacoco.plugin>0.5.5.201112152213</version.jacoco.plugin>
         <version.jrebel.plugin>1.1.3</version.jrebel.plugin>
-        
-        <!-- Dependecy Versioning -->
-        <version.richfaces-checkstyle>5</version.richfaces-checkstyle>
     </properties>
 
     <prerequisites>
@@ -176,20 +181,13 @@
                     <dependencies>
                         <dependency>
                             <groupId>org.richfaces</groupId>
-                            <artifactId>richfaces-build-checkstyle</artifactId>
-                            <version>${version.richfaces-checkstyle}</version>
+                            <artifactId>richfaces-build</artifactId>
+                            <version>${version.richfaces}</version>
                         </dependency>
                     </dependencies>
                 </plugin>
 
-                <!-- dev -->
-                <plugin>
-                    <artifactId>maven-eclipse-plugin</artifactId>
-                    <configuration>
-                        <wtpversion>2.0</wtpversion>
-                        <downloadSources>true</downloadSources>
-                    </configuration>
-                </plugin>
+                <!-- Development -->
                 <plugin>
                     <groupId>org.zeroturnaround</groupId>
                     <artifactId>jrebel-maven-plugin</artifactId>
@@ -231,14 +229,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <!-- For the release this parent pom -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <inherited>false</inherited>
-            </plugin>
-        </plugins>
     </build>
 
     <distributionManagement>
