RF-12462: renaming richfaces to richfaces-framework

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
 
-    <artifactId>richfaces</artifactId>
+    <artifactId>richfaces-framework</artifactId>
     <name>RichFaces Framework</name>
 
     <description>
