--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -38,7 +38,6 @@
     <properties>
         <!-- Base Dependencies -->
         <version.cdk>4.3.0-SNAPSHOT</version.cdk>
-        <version.jboss-javaee>3.0.1.Final</version.jboss-javaee>
         <version.myfaces>2.1.8</version.myfaces>
 
         <!-- JSF Impls -->
@@ -53,7 +52,6 @@
         <version.test-jsf>1.1.3-SNAPSHOT</version.test-jsf>
         <version.easymock>2.5.2</version.easymock>
         <version.mockito>1.8.5</version.mockito>
-        <version.junit>4.8.2</version.junit>
         <version.xmlunit>1.2</version.xmlunit>
         <version.hibernate-validator>4.2.0.Final</version.hibernate-validator>
         
@@ -384,6 +382,50 @@
                 </configuration>
             </plugin>
         </plugins>
+        
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.richfaces.cdk</groupId>
+                                        <artifactId>maven-cdk-plugin</artifactId>
+                                        <versionRange>[4.3.0-SNAPSHOT,)</versionRange>
+                                        <goals>
+                                            <goal>generate</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <execute>
+                                            <runOnIncremental>false</runOnIncremental>
+                                        </execute>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.richfaces.cdk</groupId>
+                                        <artifactId>maven-richfaces-resources-plugin</artifactId>
+                                        <versionRange>[4.3.0-SNAPSHOT,)</versionRange>
+                                        <goals>
+                                            <goal>process</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 
