--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <module>build</module>
         <module>bom</module>
         <module>framework</module>
+        <module>resources-plugin</module>
+        <module>optimized-resources</module>
     </modules>
 
     <url>http://richfaces.org</url>
@@ -76,6 +78,8 @@
 
     <properties>
         <version.richfaces>4.3.0-SNAPSHOT</version.richfaces>
+        <version.jboss-javaee>3.0.1.Final</version.jboss-javaee>
+        <version.junit>4.8.2</version.junit>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -198,34 +202,6 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${version.jacoco.plugin}</version>
-                </plugin>
-                
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.richfaces.cdk</groupId>
-                                        <artifactId>maven-cdk-plugin</artifactId>
-                                        <versionRange>[4.3.0-SNAPSHOT,)</versionRange>
-                                        <goals>
-                                            <goal>generate</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <execute>
-                                            <runOnIncremental>false</runOnIncremental>
-                                        </execute>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
