--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <modules>
         <module>build</module>
+        <module>build-resources</module>
         <module>bom</module>
         <module>framework</module>
         <module>resources-plugin</module>
