--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
         <developerConnection>scm:git:git@github.com:richfaces/richfaces.git</developerConnection>
         <url>https://github.com/richfaces/richfaces</url>
     </scm>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
     <!-- Build -->
     <build>
