--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -21,8 +21,9 @@
 
     <parent>
         <groupId>org.richfaces</groupId>
-        <artifactId>richfaces-parent</artifactId>
+        <artifactId>richfaces-build</artifactId>
         <version>4.3.0-SNAPSHOT</version>
+        <relativePath>../build</relativePath>
     </parent>
 
 
@@ -34,104 +35,6 @@
         
         Contains all project specific sources.
     </description>
-
-    <properties>
-        <!-- Base Dependencies -->
-        <version.cdk>4.3.0-SNAPSHOT</version.cdk>
-        <version.myfaces>2.1.8</version.myfaces>
-
-        <!-- JSF Impls -->
-        <version.javax.faces-api>2.1</version.javax.faces-api>
-        <version.com.sun.faces.jsf-api>2.1.0</version.com.sun.faces.jsf-api>
-        <version.org.glassfish.javax.faces>2.1.7</version.org.glassfish.javax.faces>
-        <version.org.jboss.spec.javax.faces.jboss-jsf-api_2.1_spec>2.0.2.Final</version.org.jboss.spec.javax.faces.jboss-jsf-api_2.1_spec>
-        <version.org.jboss.javax.faces.jsf-impl>2.1.7-jbossorg-2</version.org.jboss.javax.faces.jsf-impl>
-        <version.myfaces>2.1.8</version.myfaces>
-        
-        <!-- Test Dependencies -->
-        <version.test-jsf>1.1.3-SNAPSHOT</version.test-jsf>
-        <version.easymock>2.5.2</version.easymock>
-        <version.mockito>1.8.5</version.mockito>
-        <version.xmlunit>1.2</version.xmlunit>
-        <version.hibernate-validator>4.2.0.Final</version.hibernate-validator>
-        
-        <!-- Integration Tests Versions -->
-        <version.arquillian.core>1.0.1.Final</version.arquillian.core>
-        <version.arquillian.drone>1.1.0.CR2</version.arquillian.drone>
-        <version.arquillian.warp>1.0.0.Alpha2-SNAPSHOT</version.arquillian.warp>
-        <version.arquillian.graphene>2.0.0-SNAPSHOT</version.arquillian.graphene>
-        <version.shrinkwrap.resolver>2.0.0-alpha-1</version.shrinkwrap.resolver>
-        <version.shrinkwrap.descriptors>2.0.0-alpha-3</version.shrinkwrap.descriptors>
-        
-        <!-- Container Versions -->
-        <version.jboss-as7>7.1.1.Final</version.jboss-as7>
-        <version.tomee>1.0.0</version.tomee>
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-6.0</artifactId>
-                <version>${version.jboss-javaee}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            
-            <!-- RichFaces BOM Import -->
-            <dependency>
-                <groupId>org.richfaces</groupId>
-                <artifactId>richfaces-bom</artifactId>
-                <version>${version.richfaces}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- Integration Tests - Version Management -->
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>${version.shrinkwrap.resolver}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.descriptors</groupId>
-                <artifactId>shrinkwrap-descriptors-bom</artifactId>
-                <version>${version.shrinkwrap.descriptors}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-warp-bom</artifactId>
-                <version>${version.arquillian.warp}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.graphene</groupId>
-                <artifactId>graphene-webdriver</artifactId>
-                <version>${version.arquillian.graphene}</version>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-bom</artifactId>
-                <version>${version.arquillian.drone}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${version.arquillian.core}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
 
 
     <dependencies>
@@ -155,7 +58,6 @@
         <dependency>
             <groupId>org.richfaces.cdk</groupId>
             <artifactId>annotations</artifactId>
-            <version>${version.cdk}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -203,7 +105,6 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>${version.myfaces}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -217,7 +118,6 @@
         <dependency>
             <groupId>org.jboss.test-jsf</groupId>
             <artifactId>htmlunit-client</artifactId>
-            <version>${version.test-jsf}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -229,44 +129,37 @@
         <dependency>
             <groupId>org.jboss.test-jsf</groupId>
             <artifactId>jsf-mock</artifactId>
-            <version>${version.test-jsf}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>${version.easymock}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymockclassextension</artifactId>
-            <version>${version.easymock}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.test-jsf</groupId>
             <artifactId>jsf-mockito</artifactId>
-            <version>${version.test-jsf}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.test-jsf</groupId>
             <artifactId>jsf-test-scriptunit</artifactId>
-            <version>${version.test-jsf}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
-            <version>${version.xmlunit}</version>
             <scope>test</scope>
         </dependency>
 
@@ -274,7 +167,6 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${version.hibernate-validator}</version>
             <scope>test</scope>
         </dependency>
 
@@ -332,7 +224,6 @@
             <plugin>
                 <groupId>org.richfaces.cdk</groupId>
                 <artifactId>maven-cdk-plugin</artifactId>
-                <version>${version.richfaces}</version>
                 <executions>
                     <execution>
                         <id>cdk-generate-sources</id>
@@ -441,29 +332,13 @@
                 <dependency>
                     <groupId>com.sun.faces</groupId>
                     <artifactId>jsf-api</artifactId>
-                    <version>${version.com.sun.faces.jsf-api}</version>
                     <scope>compile</scope>
                     <optional>true</optional>
                 </dependency>
                 <dependency>
                     <groupId>org.glassfish</groupId>
                     <artifactId>javax.faces</artifactId>
-                    <version>${version.org.glassfish.javax.faces}</version>
                     <scope>test</scope>
-                </dependency>
-                
-                <!-- For MyFaces specific resource loading (RF-11974) -->
-                <dependency>
-                    <groupId>org.apache.myfaces.core</groupId>
-                    <artifactId>myfaces-impl</artifactId>
-                    <version>${version.myfaces}</version>
-                    <scope>provided</scope>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.apache.myfaces.core</groupId>
-                            <artifactId>myfaces-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
@@ -479,29 +354,13 @@
                 <dependency>
                     <groupId>org.jboss.spec.javax.faces</groupId>
                     <artifactId>jboss-jsf-api_2.1_spec</artifactId>
-                    <version>${version.org.jboss.spec.javax.faces.jboss-jsf-api_2.1_spec}</version>
                     <scope>compile</scope>
                     <optional>true</optional>
                 </dependency>
                 <dependency>
                     <groupId>com.sun.faces</groupId>
                     <artifactId>jsf-impl</artifactId>
-                    <version>${version.org.jboss.javax.faces.jsf-impl}</version>
                     <scope>test</scope>
-                </dependency>
-                
-                <!-- For MyFaces specific resource loading (RF-11974) -->
-                <dependency>
-                    <groupId>org.apache.myfaces.core</groupId>
-                    <artifactId>myfaces-impl</artifactId>
-                    <version>${version.myfaces}</version>
-                    <scope>provided</scope>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.apache.myfaces.core</groupId>
-                            <artifactId>myfaces-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
@@ -517,15 +376,13 @@
                 <dependency>
                     <groupId>org.apache.myfaces.core</groupId>
                     <artifactId>myfaces-api</artifactId>
-                    <version>${version.myfaces}</version>
                     <scope>compile</scope>
                     <optional>true</optional>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.myfaces.core</groupId>
                     <artifactId>myfaces-impl</artifactId>
-                    <version>${version.myfaces}</version>
-                    <scope>provided</scope>
+                    <scope>test</scope>
                 </dependency>
             </dependencies>
         </profile>
