--- a/examples/components-demo/pom.xml
+++ b/examples/components-demo/pom.xml
@@ -24,12 +24,13 @@
 
     <parent>
         <groupId>org.richfaces</groupId>
-        <artifactId>richfaces-root-parent</artifactId>
+        <artifactId>richfaces-parent</artifactId>
         <version>4.3.0-SNAPSHOT</version>
-        <relativePath>../../build/parent/pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>components-demo</artifactId>
+    <groupId>org.richfaces.examples</groupId>
     <name>RichFaces Component Examples</name>
     <packaging>war</packaging>
 
@@ -39,6 +40,13 @@
             <dependency>
                 <groupId>org.richfaces</groupId>
                 <artifactId>richfaces-bom</artifactId>
+                <version>4.3.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-build</artifactId>
                 <version>4.3.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -56,8 +64,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.richfaces.core</groupId>
-            <artifactId>richfaces-core-impl</artifactId>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces-framework</artifactId>
         </dependency>
 
         <!-- Support of additional constrains, e.g. @NotEmpty - won't work on MyFaces -->
